# C_Project_2nd

./: .gitignore  CMakeLists.txt  DIY.md  README.md  environment.yml  testing.c
include/: catdog.h
src/: catdog.c  infer.c  main.c
tests/: test_network.c
